@@ -139,6 +139,8 @@ sub parse {
                     $on_update = $otherrelationship->{'attrs'}->{cascade_copy} ? 'CASCADE' : '';
                 }
 
+                my $is_deferrable = $rel_info->{attrs}{is_deferrable} || 0;
+
                 # Make sure we dont create the same foreign key constraint twice
                 my $key_test = join("\x00", @keys);
 
@@ -163,7 +165,8 @@ sub parse {
                                 reference_fields => \@refkeys,
                                 reference_table  => $rel_table,
                                 on_delete        => $on_delete,
-                                on_update        => $on_update
+                                on_update        => $on_update,
+                                deferrable       => $is_deferrable,
                     );
                 }
             }
